adds 2nd api and sloppy code to manipulate and populate the data

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="styles.css">
-    <title>RESORTspotCHECK</title>
+    <title>SnowStatus:Colorado</title>
   </head>
   <body>
     <header>
@@ -18,21 +18,21 @@
         <select>
           <option value="" disabled selected>Choose a Resort</option>
           <option value="Arapahoe Basin">Arapahoe Basin</option>
-          <option value="Aspen Snowmass">Aspen Snowmass</option>
+          <option value="Aspen/Snowmass">Aspen Snowmass</option>
           <option value="Beaver Creek">Beaver Creek</option>
           <option value="Breckenridge">Breckenridge</option>
           <option value="Copper Mountain">Copper Mountain</option>
           <option value="Crested Butte">Crested Butte</option>
-          <option value="Eldora Resort">Eldora</option>
+          <option value="Eldora">Eldora</option>
           <option value="Keystone">Keystone</option>
           <option value="Loveland Resort">Loveland</option>
           <option value="Telluride CO">Telluride</option>
-          <option value="Purgatory Resort">Purgatory</option>
+          <option value="Purgatory">Purgatory</option>
           <option value="Silverton Mountain">Silverton Mountain</option>
-          <option value="Steamboat Resort">Steamboat</option>
-          <option value="Vail Resort">Vail</option>
+          <option value="Steamboat">Steamboat</option>
+          <option value="Vail">Vail</option>
           <option value="Winter Park">Winter Park</option>
-          <option value="Wolf Creek Ski Area">Wolf Creek</option>
+          <option value="Wolf Creek">Wolf Creek</option>
         </select>
       </div>
     </section>
@@ -43,18 +43,6 @@
 
     <section id="main">
       <div class="weather">
-        <img src="http://l.yimg.com/a/i/us/we/52/28.gif"/>
-        <BR />
-        <b>Current Conditions:</b>
-        <BR />Mostly Cloudy
-        <BR /> <BR /> <b>Forecast:</b>
-        <BR /> Thu - Partly Cloudy. High: 38 Low: 15
-        <BR /> Fri - Partly Cloudy. High: 37 Low: 26
-        <BR /> Sat - Snow. High: 29 Low: 12
-        <BR /> Sun - Mostly Sunny. High: 28 Low: 7
-        <BR /> Mon - Mostly Cloudy. High: 29 Low: 16
-        <BR /> <BR /> <a href="http://us.rd.yahoo.com/dailynews/rss/weather/Country__Country/*https://weather.yahoo.com/country/state/city-2510611/">Full Forecast at Yahoo! Weather</a>
-        <BR /> <BR /> <BR />
       </div>
     </section>
   </body>
