improves filter by name with more specfic resort name queries

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       <div class="input-field">
         <select>
           <option value="" disabled selected>Choose a Resort</option>
-          <option value="Arapahoe Basin">Arapahoe Basin</option>
+          <option value="Arapahoe Basin Ski Area">Arapahoe Basin</option>
           <option value="Aspen/Snowmass">Aspen Snowmass</option>
           <option value="Beaver Creek">Beaver Creek</option>
           <option value="Breckenridge">Breckenridge</option>
-          <option value="Copper Mountain">Copper Mountain</option>
-          <option value="Crested Butte">Crested Butte</option>
-          <option value="Eldora">Eldora</option>
+          <option value="Copper Mountain Resort">Copper Mountain</option>
+          <option value="Crested Butte Mountain Resort">Crested Butte</option>
+          <option value="Eldora Mountain Resort">Eldora</option>
           <option value="Keystone">Keystone</option>
           <option value="Loveland Resort">Loveland</option>
           <option value="Telluride CO">Telluride</option>
@@ -31,8 +31,8 @@
           <option value="Silverton Mountain">Silverton Mountain</option>
           <option value="Steamboat">Steamboat</option>
           <option value="Vail">Vail</option>
-          <option value="Winter Park">Winter Park</option>
-          <option value="Wolf Creek">Wolf Creek</option>
+          <option value="Winter Park Resort">Winter Park</option>
+          <option value="Wolf Creek Ski Area">Wolf Creek</option>
         </select>
       </div>
     </section>
