adds regex to remove forward slash and improves carousel initialization

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <option value="Eldora Mountain Resort">Eldora</option>
           <option value="Keystone">Keystone</option>
           <option value="Loveland Resort">Loveland</option>
-          <option value="Telluride CO">Telluride</option>
+          <option value="Telluride">Telluride</option>
           <option value="Purgatory">Purgatory</option>
           <option value="Silverton Mountain">Silverton Mountain</option>
           <option value="Steamboat">Steamboat</option>
