restyles fonts and colors

--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="styles.css">
-    <title>SnowStatus:Colorado</title>
+    <title>SnowStatus</title>
   </head>
   <body>
     <header>
-      <h1>RESORTspotCHECK</h1>
+      <h1><span id="header-style">Snow</span>Status</h1>
       <p>Check the weather and see the conditions at your favorite local resort!</p>
     </header>
     <section id="drop-spot">
@@ -25,7 +28,7 @@
           <option value="Crested Butte Mountain Resort">Crested Butte</option>
           <option value="Eldora Mountain Resort">Eldora</option>
           <option value="Keystone">Keystone</option>
-          <option value="Loveland Resort">Loveland</option>
+          <option value="Loveland">Loveland</option>
           <option value="Telluride">Telluride</option>
           <option value="Purgatory">Purgatory</option>
           <option value="Silverton Mountain">Silverton Mountain</option>
