yeah breaking and fixin things simultaneously

--- a/index.html
+++ b/index.html
@@ -2,21 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>SnowStatus</title>
   </head>
   <body>
     <header>
       <h1><span id="header-style">Snow</span>Status</h1>
-      <p>Check the weather and see the conditions at your favorite local resort!</p>
+      <p>Check the weather and see the conditions at your favorite resort!</p>
     </header>
-    <main class="container col s12 m6">
+    <main>
       <section id="drop-spot">
         <div class="input-field">
           <select>
@@ -42,7 +40,7 @@
       </section>
 
       <section id="drop-spot2">
-        <div id="container-list" class="carousel responsive-img" autoplay="true" fullWidth="false"></div>
+        <div id="container-list" class="carousel responsive-img" autoplay="true" fullWidth="true"></div>
       </section>
 
       <section id="main">
