suspect changes include fighting with responsiveness, including a special case for aspensnowmass and generally hating my codebase

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </section>
 
       <section id="drop-spot2">
-        <div id="container-list" class="carousel responsive-img" autoplay="true" fullWidth="true"></div>
+        <div id="container-list" class="carousel carousel-slider" autoplay="true" fullWidth="true"></div>
       </section>
 
       <section id="main">
