--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -11,7 +12,7 @@
   </head>
   <body>
     <header>
-      <h1><span id="header-style">Snow</span>Status</h1>
+      <h1 id="snow-status-title"><span id="header-style">Snow</span>Status</h1>
       <p>Check the weather and see the conditions at your favorite resort!</p>
     </header>
     <main>
@@ -40,8 +41,11 @@
       </section>
 
       <section id="drop-spot2">
-        <div id="container-list" class="carousel carousel-slider" autoplay="true" fullWidth="true"></div>
+        <div id="container-list" class="carousel" autoplay="true" fullWidth="true"></div>
+        <!-- <div id="container-list" class="carousel carousel-slider" autoplay="true" fullWidth="true"></div> -->
+        <!-- <div id="container-list" class="slider" autoplay="true" fullWidth="true"></div> -->
       </section>
+
 
       <section id="main">
         <div class="weather">
