removes carousel in place of slider, corrections to responsive design, yayyy

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <p>Check the weather and see the conditions at your favorite resort!</p>
     </header>
     <main>
+
       <section id="drop-spot">
         <div class="input-field">
           <select>
@@ -41,15 +42,13 @@
       </section>
 
       <section id="drop-spot2">
-        <div id="container-list" class="carousel" autoplay="true" fullWidth="true"></div>
-        <!-- <div id="container-list" class="carousel carousel-slider" autoplay="true" fullWidth="true"></div> -->
-        <!-- <div id="container-list" class="slider" autoplay="true" fullWidth="true"></div> -->
+        <div class="slider" indicators="false" autoplay="true" >
+          <ul id="container-list" class="slides"></ul>
+        </div>
       </section>
 
-
       <section id="main">
-        <div class="weather">
-        </div>
+        <div class="weather"></div>
       </section>
     </main>
   </body>
