final push before e2e testing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
   <body>
     <header>
       <h1 id="snow-status-title"><span id="header-style">Snow</span>Status</h1>
-      <p>Check the weather and see the conditions at your favorite resort!</p>
+      <p>Check the weather and see the conditions at your favorite CO resort!</p>
+      <a class="waves-effect waves-light btn modal-trigger" href="#modal1">about</a>
+      <!-- Modal Structure -->
+        <div id="modal1" class="modal">
+          <div class="modal-content">
+            <h4>about SnowStatus...</h4>
+            <p>
+              This page is for checking the snow status of popular Colorado ski
+              resorts by revealing the most recent instagr.am photos and the
+              relevant snow/weather information to give you the power to decide
+              if the SnowStatus is perfect to ride!
+            </p>
+          </div>
+        </div>
     </header>
     <main>
 
@@ -50,6 +63,7 @@
       <section id="main">
         <div class="weather"></div>
       </section>
+
     </main>
   </body>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
