hopefully I wont need to undo this commit

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- <meta name="mobile-web-app-capable" content="yes"> -->
     <meta name="viewport" content="width=device-width">
     <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
@@ -14,21 +15,21 @@
     <header>
       <h1 id="snow-status-title"><span id="header-style">Snow</span>Status</h1>
       <p>Check the weather and see the conditions at your favorite CO resort!</p>
-      <a class="waves-effect waves-light btn modal-trigger" href="#modal1">about</a>
-      <!-- Modal Structure -->
+    </header>
+
+    <main>
+      <a class="waves-effect waves-light btn modal-trigger" href="#modal1"><i class="material-icons">info</i></a>
         <div id="modal1" class="modal">
           <div class="modal-content">
             <h4>about SnowStatus...</h4>
             <p>
               This page is for checking the snow status of popular Colorado ski
-              resorts by revealing the most recent instagr.am photos and the
-              relevant snow/weather information to give you the power to decide
-              if the SnowStatus is perfect to ride!
+              resorts, showing the most recent instagram photos and
+              relevant weather information to give you a better picture
+              of the current conditions.
             </p>
           </div>
         </div>
-    </header>
-    <main>
 
       <section id="drop-spot">
         <div class="input-field">
@@ -65,6 +66,7 @@
       </section>
 
     </main>
+
   </body>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
