fixes floating modal button and adjusts responsive stylings

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-      <a class="waves-effect waves-light btn modal-trigger" href="#modal1"><i class="material-icons">info</i></a>
+      <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1"><i class="material-icons">info</i></a>
         <div id="modal1" class="modal">
           <div class="modal-content">
             <h4>about SnowStatus...</h4>
@@ -29,29 +29,43 @@
               of the current conditions.
             </p>
           </div>
-        </div>
+        </div> -->
 
       <section id="drop-spot">
-        <div class="input-field">
-          <select>
-            <option value="" disabled selected>Choose a Resort</option>
-            <option value="Arapahoe Basin Ski Area">Arapahoe Basin</option>
-            <option value="Aspen/Snowmass">Aspen Snowmass</option>
-            <option value="Beaver Creek">Beaver Creek</option>
-            <option value="Breckenridge">Breckenridge</option>
-            <option value="Copper Mountain Resort">Copper Mountain</option>
-            <option value="Crested Butte Mountain Resort">Crested Butte</option>
-            <option value="Eldora Mountain Resort">Eldora</option>
-            <option value="Keystone">Keystone</option>
-            <option value="Loveland">Loveland</option>
-            <option value="Telluride">Telluride</option>
-            <option value="Purgatory">Purgatory</option>
-            <option value="Silverton Mountain">Silverton Mountain</option>
-            <option value="Steamboat">Steamboat</option>
-            <option value="Vail">Vail</option>
-            <option value="Winter Park Resort">Winter Park</option>
-            <option value="Wolf Creek Ski Area">Wolf Creek</option>
-          </select>
+        <div class="flex-select">
+          <div class="input-field">
+            <select>
+              <option value="" disabled selected>Choose a Resort</option>
+              <option value="Arapahoe Basin Ski Area">Arapahoe Basin</option>
+              <option value="Aspen/Snowmass">Aspen Snowmass</option>
+              <option value="Beaver Creek">Beaver Creek</option>
+              <option value="Breckenridge">Breckenridge</option>
+              <option value="Copper Mountain Resort">Copper Mountain</option>
+              <option value="Crested Butte Mountain Resort">Crested Butte</option>
+              <option value="Eldora Mountain Resort">Eldora</option>
+              <option value="Keystone">Keystone</option>
+              <option value="Loveland">Loveland</option>
+              <option value="Telluride">Telluride</option>
+              <option value="Purgatory">Purgatory</option>
+              <option value="Silverton Mountain">Silverton Mountain</option>
+              <option value="Steamboat">Steamboat</option>
+              <option value="Vail">Vail</option>
+              <option value="Winter Park Resort">Winter Park</option>
+              <option value="Wolf Creek Ski Area">Wolf Creek</option>
+            </select>
+          </div>
+          <a class="waves-effect waves-light btn modal-trigger" href="#modal1"><i class="material-icons">info</i></a>
+            <div id="modal1" class="modal">
+              <div class="modal-content">
+                <h4>about SnowStatus...</h4>
+                <p>
+                  This page is for checking the snow status of popular Colorado ski
+                  resorts, showing the most recent instagram photos and
+                  relevant weather information to give you a better picture
+                  of the current conditions.
+                </p>
+              </div>
+            </div>
         </div>
       </section>
 
