code cleanup and cypress e2e test file added, all tests passing

--- a/index.html
+++ b/index.html
@@ -12,24 +12,13 @@
     <title>SnowStatus</title>
   </head>
   <body>
+
     <header>
       <h1 id="snow-status-title"><span id="header-style">Snow</span>Status</h1>
       <p>Check the weather and see the conditions at your favorite CO resort!</p>
     </header>
 
     <main>
-      <!-- <a class="waves-effect waves-light btn modal-trigger" href="#modal1"><i class="material-icons">info</i></a>
-        <div id="modal1" class="modal">
-          <div class="modal-content">
-            <h4>about SnowStatus...</h4>
-            <p>
-              This page is for checking the snow status of popular Colorado ski
-              resorts, showing the most recent instagram photos and
-              relevant weather information to give you a better picture
-              of the current conditions.
-            </p>
-          </div>
-        </div> -->
 
       <section id="drop-spot">
         <div class="flex-select">
@@ -45,10 +34,10 @@
               <option value="Eldora Mountain Resort">Eldora</option>
               <option value="Keystone">Keystone</option>
               <option value="Loveland">Loveland</option>
-              <option value="Telluride">Telluride</option>
               <option value="Purgatory">Purgatory</option>
               <option value="Silverton Mountain">Silverton Mountain</option>
               <option value="Steamboat">Steamboat</option>
+              <option value="Telluride">Telluride</option>
               <option value="Vail">Vail</option>
               <option value="Winter Park Resort">Winter Park</option>
               <option value="Wolf Creek Ski Area">Wolf Creek</option>
@@ -62,7 +51,7 @@
                   This page is for checking the snow status of popular Colorado ski
                   resorts, showing the most recent instagram photos and
                   relevant weather information to give you a better picture
-                  of the current conditions.
+                  of the current conditions. Happy Shredding!
                 </p>
               </div>
             </div>
